@@ -2,8 +2,8 @@
 
 ## This module is experimental
 
-It uses an incubating Java API, a specific JDK, and is not supported
-at this time.
+It uses the incubating JEP 419 API. More details on this API are available
+at `https://openjdk.java.net/jeps/419`.
 
 ## Building the panama-foreign JDK
 
@@ -32,13 +32,24 @@ mvn package
 ```
 Note: The build path for the JDK will be different on other platforms.
 
-## Running in Tomcat
+## Running
 
-Copy `tomcat-openssl-X.X.jar` to Tomcat lib folder.
+The module uses the OpenSSL 1.1 API. It requires an API compatible version of
+OpenSSL or a compatible alternative library, that can be loaded from the JVM
+library path.
 
-Remove `AprLifecycleListener` from `server.xml`.
+Copy `tomcat-openssl-1.0.jar` to the Apache Tomcat `lib` folder.
 
-Use a connector like:
+Remove `AprLifecycleListener` from `server.xml`. The
+`org.apache.tomcat.util.net.openssl.panama.OpenSSLLifecycleListener` can be
+used as a replacement with the same configuration options (such as FIPS)
+and shutdown cleanup, but is not required.
+
+Define a `Connector` using the value
+`org.apache.tomcat.util.net.openssl.panama.OpenSSLImplementation` for the
+`sslImplementationName` attribute.
+
+Example connector:
 ```
     <Connector port="8443" protocol="HTTP/1.1"
                SSLEnabled="true" scheme="https" secure="true"
@@ -53,20 +64,63 @@ Use a connector like:
         <UpgradeProtocol className="org.apache.coyote.http2.Http2Protocol" />
     </Connector>
 ```
-Run Tomcat using:
+
+Run Tomcat using the additional Java options that allow access to the API and
+native code:
 ```
-export JAVA_HOME=<pathto>/panama-foreign/build/linux-x86_64-server-release/images/jdk
-export JAVA_OPTS="-Djdk.internal.foreign.ProgrammableUpcallHandler.USE_INTRINSICS=false --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.foreign"
+export JAVA_OPTS="--enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.foreign"
 ```
 
-## Generating OpenSSL API code using jextract (optional)
+## Running the testsuite
+
+Use the following patch for `build.xml` before running the testuite:
+```
+diff --git a/build.xml b/build.xml
+index dc1260b..dd9fba9 100644
+--- a/build.xml
++++ b/build.xml
+@@ -213,6 +213,8 @@
+   <defaultexcludes remove="**/.gitignore" />
+   <!--<defaultexcludes echo="true" />-->
+
+   <!-- Classpaths -->
+   <path id="compile.classpath">
+     <pathelement location="${bnd.jar}"/>
+@@ -240,6 +242,7 @@
+     <pathelement location="${derby.jar}"/>
+     <pathelement location="${derby-shared.jar}"/>
+     <pathelement location="${derby-tools.jar}"/>
++    <pathelement location="output/build/lib/tomcat-openssl-0.1.jar"/>
+     <path refid="compile.classpath" />
+     <path refid="tomcat.classpath" />
+   </path>
+@@ -1944,7 +1947,6 @@
+
+           <jvmarg value="${test.jvmarg.egd}"/>
+           <jvmarg value="-Dfile.encoding=UTF-8"/>
+-          <jvmarg value="-Djava.library.path=${test.apr.loc}"/>
+           <jvmarg value="${test.formatter}"/>
+           <jvmarg value="-Djava.net.preferIPv4Stack=${java.net.preferIPv4Stack}"/>
+           <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED"/>
+@@ -1952,6 +1954,9 @@
+           <jvmarg value="--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED"/>
+           <jvmarg value="--add-opens=java.base/java.util=ALL-UNNAMED"/>
+           <jvmarg value="--add-opens=java.base/java.util.concurrent=ALL-UNNAMED"/>
++          <jvmarg value="--enable-native-access=ALL-UNNAMED"/>
++          <jvmarg value="--add-modules"/>
++          <jvmarg value="jdk.incubator.foreign"/>
+
+           <classpath refid="tomcat.test.classpath" />
+```
+
+## Generating the OpenSSL API code using jextract (optional)
 
 This step is only useful to be able to use additional native APIs from OpenSSL
 or stdlib.
 
 Find include paths using `gcc -xc -E -v -`, on Fedora it is
 `/usr/lib/gcc/x86_64-redhat-linux/11/include`. Edit `openssl-tomcat.conf`
-accordingly.
+accordingly to set the appropriate path.
 
 ```
 export JAVA_HOME=<pathto>/panama-foreign/build/linux-x86_64-server-release/images/jdk
@@ -74,8 +128,8 @@ $JAVA_HOME/bin/jextract @openssl-tomcat.conf openssl.h
 ```
 Note: The build path for the JDK will be different on other platforms.
 
-The code included was generated for OpenSSL 1.1.1. As long as things remain API
-compatible, this will still work.
+The code included was generated using OpenSSL 1.1.1. As long as things remain
+API compatible, the generated code will still work.
 
 The `openssl-tomcat.conf` will generate a trimmed down OpenSSL API. When
 developing new features, the full API can be generated instead using:
@@ -84,8 +138,8 @@ $JAVA_HOME/bin/jextract --source -t org.apache.tomcat.util.openssl -lssl -I /usr
 ```
 
 The `openssl.conf` file lists all the API calls and constants that can be
-generated using jextract, as a reference to what is available. Macros are not
-supported and have to be reproduced in code.
+generated using jextract, as a reference to what is available. Some macros are
+not supported and have to be reproduced in code.
 
 Before committing updated generated files, they need to have the license header
 added. The `addlicense.sh` script can do that and process all Java source files
